<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_default_temp"
        android:id="@+id/temp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="72sp" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/temp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/ic_menu_gallery" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/temp"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityName"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:ellipsize="end"
        android:gravity="center" />

    <TextView
        android:id="@+id/todayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weatherImage"
        android:layout_marginStart="16dp"
        android:text="@string/label_today"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignStart="@+id/todayLabel"
        android:layout_below="@+id/todayLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxTempLabel"
        android:textSize="24sp"
        android:text="@string/label_max_temp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minTempLabel"
        android:textSize="24sp"
        android:text="@string/label_min_temp"
        android:layout_below="@+id/maxTempLabel"
        android:layout_alignStart="@+id/maxTempLabel"
        android:layout_marginTop="4dp"
        android:layout_alignEnd="@+id/maxTempLabel"
        android:layout_toEndOf="@id/maxTempLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxTemp"
        android:textSize="22sp"
        android:text="@string/text_default_temp"
        android:gravity="center"
        android:layout_alignBaseline="@+id/maxTempLabel"
        android:layout_toEndOf="@id/maxTempLabel"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minTemp"
        android:textSize="22sp"
        android:text="@string/text_default_temp"
        android:gravity="center"
        android:layout_toEndOf="@+id/minTempLabel"
        android:layout_alignBaseline="@+id/minTempLabel"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humidity"
        android:textSize="22sp"
        android:text="@string/text_default_humidity"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:layout_above="@+id/temp"
        android:layout_alignStart="@+id/date"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windLabel"
        android:textSize="22sp"
        android:text="@string/label_wind"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/minTempLabel"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wind"
        android:textSize="18sp"
        android:text="@string/text_default_wind"
        android:textAlignment="textEnd"
        android:layout_below="@+id/windLabel"
        android:layout_alignEnd="@+id/windLabel" />

</RelativeLayout>